<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tool_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_cancel"
            android:contentDescription="@string/content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/change_your_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/current_password"
                    android:textColor="@color/new_theme_blue"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_design"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/enter_current_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/new_password"
                    android:textColor="@color/new_theme_blue"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_design"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/confirm_password"
                    android:textColor="@color/new_theme_blue"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_design"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/enter_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_8sdp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_3sdp"
                android:gravity="center"
                android:fontFamily="@font/nunito_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/change_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/content_description" />
</RelativeLayout>