<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_background"
        android:orientation="vertical"
        tools:context=".activity.ChangePasswordActivity">

        <include layout="@layout/toolbar_with_cart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/old_password"
                android:textAlignment="textStart"
                android:textColor="@color/heading_color"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/cp_old_psw"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner_rectangle"
                android:drawableEnd="@drawable/ic_down"
                android:drawableTint="@color/white"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/please_enter_old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/text_color"
                android:textColorHint="@color/hintGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/new_password"
                android:textAlignment="textStart"
                android:textColor="@color/heading_color"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/cp_new_psw"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner_rectangle"
                android:drawableEnd="@drawable/ic_down"
                android:drawableTint="@color/white"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/please_enter_new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/text_color"
                android:textColorHint="@color/hintGray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/confirm_password"
                android:textAlignment="textStart"
                android:textColor="@color/heading_color"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/cp_cnfm_psw"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner_rectangle"
                android:drawableEnd="@drawable/ic_down"
                android:drawableTint="@color/white"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/please_enter_confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/text_color"
                android:textColorHint="@color/hintGray"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cp_updt_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="end"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rect_button_background"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include layout="@layout/progress_dialog_layout" />
</RelativeLayout>