<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.instaapp.veggietemp1.viewModel.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:orientation="vertical">

                <include layout="@layout/toolbar"
                    android:id="@+id/toolbar"/>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/_100sdp"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:layout_marginTop="-50sp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/profile_gradient_color"
                    android:src="@drawable/icon_profile">

                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/heading_color"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_corner_rectangle"
                    android:drawableEnd="@drawable/ic_down"
                    android:drawableTint="@color/white"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/please_enter_username"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textPersonName"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hintGray"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtForgotUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_11sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/forgot_username"
                    android:textColor="@color/new_theme_blue"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/password"
                    android:textAlignment="textStart"
                    android:textColor="@color/heading_color"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="5dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_corner_rectangle"
                    android:drawableEnd="@drawable/ic_down"
                    android:drawableTint="@color/white"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/please_enter_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hintGray"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_11sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/new_theme_blue"
                    android:textSize="@dimen/_12sdp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/rect_button_background"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtLoginAsGuest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/login_as_guest"
                    android:textColor="@color/heading_color"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtAlreadyRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/new_user_signup"
                    android:textColor="@color/heading_color"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <include layout="@layout/progress_dialog_layout"
            android:id="@+id/progress"/>

    </RelativeLayout>
</layout>